HP Envy x360 takes long to wake up from suspend (s2idle)
Brief summary of the problem:
While going to sleep is pretty much instant, on waking up the system stays completely unresponsive for multiple seconds. The screen itself turns on immediately with the prior contents though.
Hardware description:
- laptop model: HP Envy x360 13-ay0779ng
- CPU: Ryzen 4700U
- GPU: Vega 7 graphics
System information:
- Distro name and Version: Manjaro 21.3.6
- Kernel version: 5.18.15-1 from the Manjaro repos
Log files
dmesg.log from going to suspend and waking up again
Note that I'm not at all sure if this is drm related at all, please point me to a better place to report this if needed.